--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -3,12 +3,15 @@
   flex-wrap: wrap;
   width: 380px;
   height: 380px;
+  border: solid 8px rgba(50, 255, 50, 1);
+  border-radius: 12px;
+  background: rgba(0, 255, 80, .5);
 
   .map_square{
     padding: 0;
     margin: 0;
     display: flex;
-    border: solid 1px black;
+    border: solid 1px rgba(255, 255, 255, .8);
     width: 40px;
     height: 40px;
     cursor: pointer;
