return map from server with squares

--- a/app/views/map/_controls.slim
+++ b/app/views/map/_controls.slim
@@ -3,3 +3,6 @@
   .btn.start_game Start Game
   .btn.solve Solve
   .btn.save_map Save Map
+  .btn
+    input.map_index name="map_index" type="text" /
+    .find_map Find Map
