--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -1,19 +1,27 @@
-.map{
-  display: flex;
-  flex-wrap: wrap;
-  width: 380px;
-  height: 380px;
-  border: solid 8px rgba(50, 255, 50, 1);
-  border-radius: 12px;
-  background: rgba(0, 255, 80, .5);
+.map_container{
+  .name{
+    border-radius: 5px;
+    border-color: rgba(0, 0, 0, .4);
+    margin-bottom: 5px;
+  }
 
-  .map_square{
-    padding: 0;
-    margin: 0;
+  .map{
     display: flex;
-    border: solid 1px rgba(255, 255, 255, .8);
-    width: 40px;
-    height: 40px;
-    cursor: pointer;
+    flex-wrap: wrap;
+    width: 380px;
+    height: 380px;
+    border: solid 8px rgba(50, 255, 50, 1);
+    border-radius: 12px;
+    background: rgba(0, 255, 80, .5);
+
+    .map_square{
+      padding: 0;
+      margin: 0;
+      display: flex;
+      border: solid 1px rgba(255, 255, 255, .8);
+      width: 40px;
+      height: 40px;
+      cursor: pointer;
+    }
   }
 }
