--- a/app/views/map/new.slim
+++ b/app/views/map/new.slim
@@ -1,5 +1,5 @@
 .map_container
-  input.name type="text"
+  input.name type="text" placeholder="name"
   .map
    -(0...@map_size).each do
      -(0...@map_size).each do
