--- a/app/assets/stylesheets/controls.scss
+++ b/app/assets/stylesheets/controls.scss
@@ -10,8 +10,14 @@
     background: blue;
     color: white;
     margin-bottom: 5px;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 
-    :hover{
+    &:hover{
       background: red;
     }
   }
