--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -12,22 +12,31 @@
   }
 
   .map{
-    display: flex;
-    flex-wrap: wrap;
-    width: 380px;
-    height: 380px;
     border: solid 8px rgba(50, 255, 50, 1);
     border-radius: 12px;
     background: rgba(0, 255, 80, .5);
+    width: 322px;
+    height: 322px;
 
-    .map_square{
-      padding: 0;
-      margin: 0;
+    .squares_container{
+      border: solid 1px white;
       display: flex;
-      border: solid 1px rgba(255, 255, 255, .8);
-      width: 40px;
-      height: 40px;
-      cursor: pointer;
+      flex-wrap: wrap;
+      width: 100%;
+      height: 100%;
+      box-sizing: border-box;
+
+      .map_square{
+        padding: 0;
+        margin: 0;
+        display: flex;
+        border: solid 1px rgba(255, 255, 255, .8);
+        flex-basis: 40px;
+        width: 40px;
+        height: 40px;
+        cursor: pointer;
+        box-sizing: border-box;
+      }
     }
   }
 }
