--- a/app/views/map/_controls.slim
+++ b/app/views/map/_controls.slim
@@ -1,8 +1,10 @@
-.controls
-  .btn.next_group Next Group
-  .btn.start_game Start Game
-  .btn.solve Solve
-  .btn.save_map Save Map
-  .btn
-    input.map_index name="map_index" type="text" /
-    .find_map Find Map
+.map_controls
+  .controls.solve_controls
+    .btn.solve Solve
+    .btn
+      input.map_index name="map_index" type="text" /
+      .find_map Find Map
+
+  .controls.create_controls
+    .btn.next_group Next Group
+    .btn.save_map Save Map
