--- a/app/assets/stylesheets/controls.scss
+++ b/app/assets/stylesheets/controls.scss
@@ -1,24 +1,38 @@
-.controls{
-  position: absolute;
-  left: 420px;
-  top: 20px;
+.btn{
+  cursor: pointer;
+  padding: 3px 8px;
+  border-radius: 4px;
+  background: blue;
+  color: white;
+  margin-bottom: 5px;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
+  &:hover{
+    background: red;
+  }
+}
+
+.game_controls{
+  display: flex;
+  width: 200px;
 
   .btn{
-    cursor: pointer;
-    padding: 3px 8px;
-    border-radius: 4px;
-    background: blue;
-    color: white;
-    margin-bottom: 5px;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+    flex-basis: 48%;
+    width: 48%;
+    margin: 2%;
+    padding: 5px 8px;
 
-    &:hover{
+    &.active{
       background: red;
     }
   }
+}
+
+.map_controls{
+  .controls{ display: none; }
 }
