--- a/app/assets/stylesheets/controls.scss
+++ b/app/assets/stylesheets/controls.scss
@@ -34,5 +34,10 @@
 }
 
 .map_controls{
-  .controls{ display: none; }
+  margin-left: 15px;
+  margin-top: 39px;
+
+  .controls{
+    display: none;
+  }
 }
