--- a/app/views/map/_controls.slim
+++ b/app/views/map/_controls.slim
@@ -6,5 +6,9 @@
       .find_map Find Map
 
   .controls.create_controls
+    .btn.change_size
+      input.map_index name="map_index" type="text" /
+      br
+      | Change Size
     .btn.next_group Next Group
     .btn.save_map Save Map
